# services/polity/src/main/java/com/odonta/polity/controller/JusticeController.java
@@ -2,10 +2,6 @@ package com.odonta.polity.controller;
 
 import com.odonta.authorization.spring.AuthenticatedUserReader;
 import com.odonta.polity.api.JusticeApi;
-import com.odonta.polity.api.model.AppealResponse;
-import com.odonta.polity.api.model.ConstitutionalReviewResponse;
-import com.odonta.polity.api.model.OfficeTermReviewResponse;
-import com.odonta.polity.api.model.SanctionResponse;
 import com.odonta.polity.mapper.AppealTransportMapper;
 import com.odonta.polity.mapper.ConstitutionalReviewTransportMapper;
 import com.odonta.polity.mapper.OfficeTermReviewTransportMapper;
@@ -14,9 +10,9 @@ import com.odonta.polity.service.AppealService;
 import com.odonta.polity.service.ConstitutionalReviewService;
 import com.odonta.polity.service.OfficeTermReviewService;
 import com.odonta.polity.service.SanctionService;
-import java.util.List;
 import java.util.UUID;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.web.PagedModel;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -36,23 +32,21 @@ public class JusticeController implements JusticeApi {
   private final AuthenticatedUserReader users;
 
   @Override
-  public ResponseEntity<List<SanctionResponse>> listPolitySanctions(
-      UUID polityId, Integer page, Integer size) {
+  public ResponseEntity<PagedModel> listPolitySanctions(UUID polityId, Integer page, Integer size) {
     return PageResponses.ok(
         sanctionService.list(polityId, users.currentUser().id(), page, size),
         sanctionMapper::toResponses);
   }
 
   @Override
-  public ResponseEntity<List<AppealResponse>> listPolityAppeals(
-      UUID polityId, Integer page, Integer size) {
+  public ResponseEntity<PagedModel> listPolityAppeals(UUID polityId, Integer page, Integer size) {
     return PageResponses.ok(
         appealService.list(polityId, users.currentUser().id(), page, size),
         appealMapper::toResponses);
   }
 
   @Override
-  public ResponseEntity<List<OfficeTermReviewResponse>> listPolityOfficeTermReviews(
+  public ResponseEntity<PagedModel> listPolityOfficeTermReviews(
       UUID polityId, Integer page, Integer size) {
     return PageResponses.ok(
         officeTermReviewService.list(polityId, users.currentUser().id(), page, size),
@@ -60,7 +54,7 @@ public class JusticeController implements JusticeApi {
   }
 
   @Override
-  public ResponseEntity<List<ConstitutionalReviewResponse>> listPolityConstitutionalReviews(
+  public ResponseEntity<PagedModel> listPolityConstitutionalReviews(
       UUID polityId, Integer page, Integer size) {
     return PageResponses.ok(
         constitutionalReviewService.list(polityId, users.currentUser().id(), page, size),
